Support minimum version to 2023.1